thanks page fixed V1

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <input type="submit" value="Send" name="send">
                 </div>
             </div>
-            <input type="hidden" name="_next" value="https://yahyashannat-portfolio.netlify.app/thanks.html">
+            <input type="hidden" name="_next" value="https://yahyashannat-portfolio.netlify.app/pages/thanks.html">
             <input type="hidden" name="_subject" value="New email">
         </form>
             </div>
