--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -5,11 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>thanks</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../scss/main.css">
 </head>
+<style>
+    .container {
+        height: 100vh;
+        width: 75vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    h1{
+        font-size: 2.7em;
+    }
+    h2{margin:1rem}
+    button{
+        border: none;
+        outline: none;
+        padding: .5rem 1.5rem;
+        background-color: #f1ec40;
+        font-size: 1em;
+        font-weight: bold;
+        letter-spacing: 1.5px;
+        border: 2px solid #f1ec40;
+        transition: all .2s ease-in-out;
+    }
+    button:hover{
+        letter-spacing: 2px;
+        background-color: transparent;
+    }
+    button:hover a{
+        color:#f1ec40;
+    }
+    a{
+        text-decoration: none;
+        color: #111;
+    }
+    i{
+        color: #f1ec40;
+        size:20px;
+        opacity:.7;
+        transition: opacity .2s ease-in-out;
+    }
+    i:hover{
+        opacity: 1;
+    }
+    ul {
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        margin-bottom: 1rem;
+    }
+    ul li {
+        list-style: none;
+    }
+</style>
 <body>
     <div class="container">
-        <h1>Thanks</h1>
+        <h1>Thanks for sending a message. I will reply as soon as I can</h1>
+        <h2>You can also contact me through my social media accounts</h2>
+        <ul>
+            <li><a href="https://www.instagram.com/yahya_sh42/" target="_blank"><i class="fab fa-instagram fa-3x" size="20x"></i></a></li>
+            <li><a href="https://www.facebook.com/yahya.shannat" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></li>
+            <li><a href="https://wa.link/tztieu" target="_blank"><i class="fab fa-whatsapp fa-3x"></i></a></li>
+        </ul>
+        <button><a href="https://yahyashannat-portfolio.netlify.app/">Back to main page</a></button>
     </div>
 </body>
 </html>
