--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="scss/main.css">
     <title>YASH</title>
 </head>
@@ -13,13 +14,18 @@
     <section id='navBar'>
         <div class="navigation">
             <h2>YASH</h2>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#services">SERVICES</a></li>
                 <li><a href="#project">PROJECT</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </div>
     </section>
     <!-- End Nav-Bar -->
@@ -54,40 +60,9 @@
                         <br>
                         <p>I have a youtube channel that I make videos about web development; if you are interested, check out the link below in the footer
                         </p>
+                        <button class="primaryBtn"><a>download my CV</a></button>
                     </div>
-                    <h2 class="head">my skills</h2>
-                    <div class="skill">
-                        <div class="item">
-                        <h4>HTML & CSS:</h4>
-                        <span class="chart" data-percent="90"><span class="persent">90%</span></span>
-                        </div>
-
-                        <div class="item">
-                        <h4>Javascript:</h4>
-                        <span class="chart" data-percent="60"><span class="persent">60%</span></span>
-                    </div>
-                        <div class="item">
-                        <h4>React Js:</h4>
-                        <span class="chart" data-percent="50"><span class="persent">50%</span></span>
-                    </div>
-                        <div class="item">
-                        <h4>jQuery:</h4>
-                        <span class="chart" data-percent="30"><span class="persent">30%</span></span>
-                    </div>
-                        <div class="item">
-                        <h4>Bootstrap:</h4>
-                        <span class="chart" data-percent="80"><span class="persent">80%</span></span>
-                    </div>
-                        <div class="item">
-                        <h4>Sass:</h4>
-                        <span class="chart" data-percent="90"><span class="persent">90%</span></span>
-                    </div>
-                    <div class="item">
-                        <h4>Figma:</h4>
-                        <span class="chart" data-percent="70"><span class="persent">70%</span></span>
-                    </div>
-
-                    </div>
+                    
                 </div>
                 <div class="imgBx">
                     <img src="/img/about-me.svg" alt="about-me">
@@ -171,7 +146,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://yahyashannat-portfolioh.netlify.app" target="_blank">
+                <a href="https://yahyashannat-old-portfolio.netlify.app" target="_blank">
                     <div class="workBx" data-tilt data-tilt-reverse="true">
                         <div class="imgBx">
                             <img src="/img/project-4.png" alt="">
@@ -271,22 +246,22 @@
         </div>
     </section>
     <!-- End contact-->
-
-
+    <!-- start footer-->
+    <section id="footer">
+        <div class="footer">
+            <ul>
+                <li><a href="https://www.instagram.com/yahya_sh42/" target="_blank"><i class="fab fa-instagram fa-2x" size="20x"></i></a></li>
+                <li><a href="https://www.facebook.com/yahya.shannat" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                <li><a href="https://wa.link/tztieu" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UC2tvTb_DX35TLUCTj9m1byg" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+            </ul>
+            <p>Copyright © 2021 YASH. All Rights Reserved.</p>
+        </div>
+    </section>
+    <!-- End footer-->
+    
+    <script src="/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.1/vanilla-tilt.min.js" integrity="sha512-xTXLkWCanTzPE4g+vyMXdJ1MYKwuhdJqxNfPDE8sHnwwHBXTZY0VNWBiCRiDtGEtLzmLkK5GCSXshPCP2kt8Ug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="vanilla-tilt.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
-    <script src="/js/jquery.easypiechart.js"></script>
-    <script>
-        $(function() {
-            $('.chart').easyPieChart({
-                barColor:'#f1ec40',
-                size:100,
-                scaleColor:false,
-                lineWidth:5,
-                trackColor:'#000',
-            });
-    });
-    </script>
 </body>
 </html>
