--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h1>SERVICES</h1>
             </div>
             <div class="services">
-                <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-reverse="true">
+                <div class="card" data-tilt data-tilt-reverse="true">
                     <div class="iconBx">
                         <img src="/img/web-development.svg" alt="web-development">
                     </div>
@@ -87,7 +87,7 @@
                         <p>I Can Develop Websites Professionally Using HTML, CSS, and Javascript.</p>
                     </div>
                 </div>
-                <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-reverse="true">
+                <div class="card" data-tilt data-tilt-reverse="true">
                     <div class="iconBx">
                         <img src="/img/web-design.svg" alt="web-development">
                     </div>
@@ -96,7 +96,7 @@
                         <p>I can design websites very well using figma or adobe xD</p>
                     </div>
                 </div>
-                <div class="card" data-tilt data-tilt-scale="1.1" data-tilt-reverse="true">
+                <div class="card" data-tilt data-tilt-reverse="true">
                     <div class="iconBx">
                         <img src="/img/responsive.svg" alt="web-development">
                     </div>
