--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                 <div class="content">
                     <div class="me">
                         <h2 class="head">who am I ?</h2>
-                        <p>My name is Yahya Shannat; I am from Syria, now I live in Turkey. I started learning to code one year ago.</p>
-                        <br>
-                        <p>I have a youtube channel that I make videos about web development; if you are interested, check out the link below in the footer
+                        <p>Hello, I'm Yahya Chanat, an 18-year-old aspiring Software Engineer currently in my first year at Firat University.</p>
+                        
+                        <p>
+                            I started by learning HTML and CSS. Then, I jumped into JavaScript. Now, I'm exploring ReactJS, a cool library for building dynamic user interfaces. And NextJS! It's like the advanced version of ReactJS.
                         </p>
                         <button class="primaryBtn"><a href="./pages/cv.html" target="_blank">download my CV</a></button>
                     </div>
@@ -85,7 +86,7 @@
                     </div>
                     <div class="content">
                         <h2>web development</h2>
-                        <p>I Can Develop Websites Professionally Using HTML, CSS, and Javascript.</p>
+                        <p>I Can Develop Websites Professionally Using NextJS</p>
                     </div>
                 </div>
                 <div class="card" data-tilt data-tilt-reverse="true">
@@ -94,7 +95,7 @@
                     </div>
                     <div class="content">
                         <h2>web design</h2>
-                        <p>I can design websites very well using figma or adobe xD</p>
+                        <p>I can design websites very well using figma</p>
                     </div>
                 </div>
                 <div class="card" data-tilt data-tilt-reverse="true">
@@ -251,12 +252,12 @@
     <section id="footer">
         <div class="footer">
             <ul>
-                <li><a href="https://www.instagram.com/yahya_sh42/" target="_blank"><i class="fab fa-instagram fa-2x" size="20x"></i></a></li>
+                <li><a href="https://www.instagram.com/yahyashannat/" target="_blank"><i class="fab fa-instagram fa-2x" size="20x"></i></a></li>
                 <li><a href="https://www.facebook.com/yahya.shannat" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a></li>
-                <li><a href="https://wa.link/tztieu" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
+                <li><a href="https://wa.me/905368853122" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UC2tvTb_DX35TLUCTj9m1byg" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
             </ul>
-            <p>Copyright © 2021 YASH. All Rights Reserved.</p>
+            <p>Copyright © 2024 YASH. All Rights Reserved.</p>
         </div>
     </section>
     <!-- End footer-->
