--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <h1>LAST PROJECTS</h1>
         </div>
         <div class="project">
-          <a href="https://yahya-2005.github.io/react-anime/" target="_blank">
+          <a href="https://projects-delta-five.vercel.app/" target="_blank">
             <div class="workBx" data-tilt data-tilt-reverse="true">
               <div class="imgBx">
                 <img src="/img/project-1.png" alt="" />
@@ -153,7 +153,7 @@
               </div>
             </div>
           </a>
-          <a href="https://old-por-yash.netlify.app" target="_blank">
+          <a href="https://projects-delta-five.vercel.app/" target="_blank">
             <div class="workBx" data-tilt data-tilt-reverse="true">
               <div class="imgBx">
                 <img src="/img/project-5.png" alt="" />
@@ -163,7 +163,7 @@
               </div>
             </div>
           </a>
-          <a href="https://attack-on-titan-yash.netlify.app" target="_blank">
+          <a href="https://projects-delta-five.vercel.app/" target="_blank">
             <div class="workBx" data-tilt data-tilt-reverse="true">
               <div class="imgBx">
                 <img src="/img/project-3.png" alt="" />
@@ -174,7 +174,7 @@
             </div>
           </a>
           <a
-            href="https://yahyashannat-old-portfolio.netlify.app"
+            href="https://projects-delta-five.vercel.app/"
             target="_blank"
           >
             <div class="workBx" data-tilt data-tilt-reverse="true">
@@ -186,7 +186,7 @@
               </div>
             </div>
           </a>
-          <a href="https://elitecorp-bootstrap.netlify.app" target="_blank">
+          <a href="https://projects-delta-five.vercel.app/" target="_blank">
             <div class="workBx" data-tilt data-tilt-reverse="true">
               <div class="imgBx">
                 <img src="/img/project-2.png" alt="" />
@@ -196,7 +196,7 @@
               </div>
             </div>
           </a>
-          <a href="https://pink-website.netlify.app" target="_blank">
+          <a href="https://projects-delta-five.vercel.app/" target="_blank">
             <div class="workBx" data-tilt data-tilt-reverse="true">
               <div class="imgBx">
                 <img src="/img/project-6.png" alt="" />
