--- a/index.html
+++ b/index.html
@@ -67,15 +67,12 @@
             <div class="me">
               <h2 class="head">who am I ?</h2>
               <p>
-                Hello, I'm Yahya Chanat, an 18-year-old aspiring Software
+                Hello, I'm Yahya Chanat, an aspiring Software
                 Engineer currently in my first year at Firat University.
               </p>
 
               <p>
-                I started by learning HTML and CSS. Then, I jumped into
-                JavaScript. Now, I'm exploring ReactJS, a cool library for
-                building dynamic user interfaces. And NextJS! It's like the
-                advanced version of ReactJS.
+                I'm a web developer with experience in both front-end and back-end technologies.  I started by learning the essentials of HTML, CSS, and JavaScript. From there, I progressed to building interactive user interfaces with ReactJS and creating full-stack web applications using NextJS and MongoDB.  I'm always eager to learn new tools and frameworks to improve my skills.
               </p>
               <button class="primaryBtn">
                 <a href="./pages/cv.html" target="_blank">download my CV</a>
