--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 I'm a web developer with experience in both front-end and back-end technologies.  I started by learning the essentials of HTML, CSS, and JavaScript. From there, I progressed to building interactive user interfaces with ReactJS and creating full-stack web applications using NextJS and MongoDB.  I'm always eager to learn new tools and frameworks to improve my skills.
               </p>
               <button class="primaryBtn">
-                <a href="./pages/cv.html" target="_blank">download my CV</a>
+                <a href="./pages/Black Modern Professional Resume.pdf" download>download my CV</a>
               </button>
             </div>
           </div>
