--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="hero">
           <div class="content anim1">
             <h1 class="anim1"><span>YA</span>HYA <span>SH</span>ANNAT</h1>
-            <h2 class="anim1">Front-End Developer</h2>
+            <h2 class="anim1">Full-Stack Developer</h2>
             <button class="primaryBtn anim1">
               <a href="#project">projects</a>
             </button>
