--- a/index.html
+++ b/index.html
@@ -319,5 +319,7 @@
     <script src="vanilla-tilt.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
+        <!-- End footer-->
+
   </body>
 </html>
