--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <div class="footer">
         <ul>
           <li>
-            <a href="https://www.instagram.com/yahyashannat/" target="_blank"
+            <a href="https://www.instagram.com/yahyadev42/" target="_blank"
               ><i class="fab fa-instagram fa-2x" size="20x"></i
             ></a>
           </li>
